# nz-monitor

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  DESIGN.md  DEVELOPMENT.md  NETEZZA.md  README.md  ROADMAP.md  docker-compose.yml  nginx.conf  pyproject.toml  start-local.ps1  stop-local.ps1
backend/: Dockerfile  config.py  main.py  requirements.txt
backend/aichat/: __init__.py  router.py
backend/auth/: __init__.py  router.py  security.py
backend/cache/: __init__.py  base.py  memory.py
backend/collector/: __init__.py  __main__.py  jobs.py
backend/drivers/: README.md
backend/monitoring/: __init__.py  router.py
backend/netezza/: connection.py  queries.py  router.py  service.py
backend/notify/: __init__.py  agent.py  ai.py  assistant.py  telegram.py
backend/settings/: __init__.py  router.py
backend/sftp/: __init__.py  connection.py  router.py  service.py
backend/store/: __init__.py  settings_store.py  snapshots.py
demo/: README.md  app.py
frontend/: .eslintrc.cjs  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  theme.tsx
frontend/src/components/: AuthGate.tsx  FreshnessSeal.tsx  KpiCard.tsx  Layout.tsx  PageSkeleton.tsx  RefreshButton.tsx  SearchInput.tsx  SkewBadge.tsx  StatusPill.tsx  (+2 more)
tests/: conftest.py  test_agent.py  test_ai.py  test_alerts.py  test_assistant.py  test_auth.py  test_cache.py  test_collector.py  test_history_filter.py  test_live_fresh.py  test_passive_endpoint.py  test_settings.py  test_snapshots.py
(+21 files in other folders)
